--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,14 +1,15 @@
 <h1 class="text-center mb-4">Welcome to my todolist app</h1>
 <%= render 'layouts/task_form'  %>
-<% i=1 %>
 <div class="container">
-  <ul id='t'>
+  <ul class='task'>
   <% @categories.each do  |category|%>
   <li class="tabs"><%= category.title  %></li>
-  <div class="card">
+  <div class="card" id="<%= category.id %>">
     <ul>
       <% category.tasks.each do |task|  %>
       <li>
+        
+        <%= check_box_tag(:done) %>
         <%= task.title  %>
         <% unless task.deadline.nil? %>
           , to read: <%= task.deadline.strftime('%D')  %>
@@ -17,11 +18,10 @@
       <% end %>
     </ul>
   </div>
-  <% i+=1 %>
   <% end %>
   </ul>
+ 
 </div>
-
 <div class="container">
   <div class="row">
     <% @tasks.each do |task|  %>
