--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
 
   <body>
     <%= render 'layouts/navbar'  %>
+    <%= render 'layouts/login'  %>
     <%= render 'layouts/flash'  %>
     <%= yield %>
   </body>
