--- a/app/views/tasks/create.js.erb
+++ b/app/views/tasks/create.js.erb
@@ -1,1 +1,5 @@
 document.getElementById('<%= @category.id %>').querySelectorAll('ul')[0].insertAdjacentHTML("beforeend", "<%= j render 'task', task: @task %>");
+
+$(function() {
+  $('#<%= @category.id %>').slideDown("slow");
+});
